{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 68,
  "lineage": "ebf2ceb4-fb8e-1fcf-f04f-94a40a175034",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "pico",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.40",
            "association_id": "eipassoc-0fc9152fd9d27ffc0",
            "domain": "vpc",
            "id": "eipalloc-0a1a7aa7de1eedb7e",
            "instance": "i-0788b28e300f23f0e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-006220da0251196af",
            "private_dns": "ip-10-0-1-40.ec2.internal",
            "private_ip": "10.0.1.40",
            "public_dns": "ec2-3-233-132-136.compute-1.amazonaws.com",
            "public_ip": "3.233.132.136",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.pico-gw",
            "aws_network_interface.pico-web-server",
            "aws_security_group.allow_web",
            "aws_subnet.private_subnet",
            "aws_vpc.pico_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pico-bastion-server-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-042e8287309f5df03",
            "arn": "arn:aws:ec2:us-east-1:685078503369:instance/i-0788b28e300f23f0e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0788b28e300f23f0e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pico-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-006220da0251196af"
              }
            ],
            "primary_network_interface_id": "eni-006220da0251196af",
            "private_dns": "ip-10-0-1-40.ec2.internal",
            "private_ip": "10.0.1.40",
            "public_ip": "3.233.132.136",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b5c44e8ac2669051",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0db982089f7ddee6e",
            "tags": {
              "Name": "pico_bastion_server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ea6e7467fb024e74"
            ]
          },
          "dependencies": [
            "aws_network_interface.pico-web-server",
            "aws_security_group.allow_web",
            "aws_subnet.private_subnet",
            "aws_vpc.pico_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "pico-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:685078503369:internet-gateway/igw-022d88923fb639ff3",
            "id": "igw-022d88923fb639ff3",
            "owner_id": "685078503369",
            "tags": {
              "Name": "dev"
            },
            "vpc_id": "vpc-048316fd0fd15986d"
          },
          "dependencies": [
            "aws_vpc.pico_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "pico-web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-021a74c112aeb50d8",
                "device_index": 0,
                "instance": "i-0788b28e300f23f0e"
              }
            ],
            "id": "eni-006220da0251196af",
            "ipv6_address_count": 0,
            "mac_address": "12:5a:80:97:2f:0b",
            "private_ip": "10.0.1.40",
            "private_ips": [
              "10.0.1.40"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0ea6e7467fb024e74"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0db982089f7ddee6e"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.private_subnet",
            "aws_vpc.pico_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e05798b3cdafb04c",
            "owner_id": "685078503369",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-022d88923fb639ff3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "vpc_id": "vpc-048316fd0fd15986d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.pico-gw",
            "aws_vpc.pico_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0353f5dde3cb1df26",
            "owner_id": "685078503369",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-022d88923fb639ff3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "vpc_id": "vpc-048316fd0fd15986d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.pico-gw",
            "aws_vpc.pico_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070f5eaa765fdb318",
            "route_table_id": "rtb-0e05798b3cdafb04c",
            "subnet_id": "subnet-0db982089f7ddee6e"
          },
          "dependencies": [
            "aws_internet_gateway.pico-gw",
            "aws_route_table.private-route-table",
            "aws_subnet.private_subnet",
            "aws_vpc.pico_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a84ca91fb3744abe",
            "route_table_id": "rtb-0353f5dde3cb1df26",
            "subnet_id": "subnet-063350d12b63f8632"
          },
          "dependencies": [
            "aws_internet_gateway.pico-gw",
            "aws_route_table.public-route-table",
            "aws_subnet.public_subnet",
            "aws_vpc.pico_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:685078503369:security-group/sg-0ea6e7467fb024e74",
            "description": "Allow web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ea6e7467fb024e74",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "685078503369",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-048316fd0fd15986d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.pico_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:685078503369:subnet/subnet-0db982089f7ddee6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0db982089f7ddee6e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "685078503369",
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "vpc_id": "vpc-048316fd0fd15986d"
          },
          "dependencies": [
            "aws_vpc.pico_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:685078503369:subnet/subnet-063350d12b63f8632",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-063350d12b63f8632",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "685078503369",
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "vpc_id": "vpc-048316fd0fd15986d"
          },
          "dependencies": [
            "aws_vpc.pico_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "pico_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:685078503369:vpc/vpc-048316fd0fd15986d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-089386e141d6be072",
            "default_route_table_id": "rtb-044e25b34c524a1b7",
            "default_security_group_id": "sg-0616a1bcbd38a70f9",
            "dhcp_options_id": "dopt-8efca7f4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-048316fd0fd15986d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-044e25b34c524a1b7",
            "owner_id": "685078503369",
            "tags": {
              "Name": "dev"
            },
            "tags_all": {
              "Name": "dev"
            }
          }
        }
      ]
    }
  ]
}